[package]
name = "microarray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "sqlite",

] }